<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.eyeque.mono.AccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "15sp"
        android:text="@string/accountHeaderTextString"
        android:id="@+id/accountHeaderTextView"
        android:textColor="@color/background_material_dark"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop = "15sp"
        android:id="@+id/nameHeaderDivView"
        android:layout_below="@+id/accountHeaderTextView"
        android:background="@android:color/darker_gray"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loading_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/account_form"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/accountLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email"
                    android:hint="@string/prompt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/genderLinearLayout"
                android:layout_height="30dp"
                android:layout_width="wrap_content"
                android:layout_marginTop="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Gender:  "
                    android:id="@+id/genderTextView"
                    android:textColor="@color/background_material_dark"
                    android:textSize="16sp"/>

                <CheckBox
                    android:id="@+id/maleCheckbox"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:onClick="maleClicked" >
                </CheckBox>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:id="@+id/maleTextView"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true" >
                </TextView>
                <CheckBox
                    android:id="@+id/femaleCheckbox"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:onClick="femaleClicked" >
                </CheckBox>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:id="@+id/femaleTextView"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true" >
                </TextView>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/brithYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Birth Year"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:windowSoftInputMode="stateHidden"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/account_save_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="Save"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

